Closed Bug 339289 Opened 20 years ago Closed 19 years ago

[FIX]CSS generated content can't be applied to fieldset

Categories

(Core :: CSS Parsing and Computation, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla1.9alpha1

People

(Reporter: bpm230, Assigned: bzbarsky)

References

()

Details

(Keywords: css2)

Attachments

(2 files)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8.1a2) Gecko/20060512 BonEcho/2.0a2 Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8.1a2) Gecko/20060512 BonEcho/2.0a2 Generated content applied to form elements LEGEND, FIELDSET, INPUT and TEXTAREA using pseudo elements ::after or ::before won't be displayed. Reproducible: Always Actual Results: Generated content is not displayed. Expected Results: Generated content should be displayed after or before each element.
Keywords: css2
(In reply to comment #0) > Generated content applied to form elements LEGEND, FIELDSET, INPUT and TEXTAREA > using pseudo elements ::after or ::before won't be displayed. Please excuse my error. Generated content _is displayed_ for LEGEND element. I've removed it from the testcase URL.
For input this is definitely invalid and for textarea it's probably invalid; for fieldset it's probably valid, though.
(In reply to comment #2) > For input this is definitely invalid and for textarea it's probably invalid; > for fieldset it's probably valid, though. Excuse me, but why do you considered it as invalid? INPUT and TEXTAREA are inline replaced elements just like IMG, so, IMO, generated content could be added in a similar way.
It's invalid for IMG too. The incorrect examples in REC-CSS2 have been removed in CSS 2.1.
(In reply to comment #4) > It's invalid for IMG too. The incorrect examples in REC-CSS2 have been removed > in CSS 2.1. My fool error. I've founded what you are talking about. I must read specs more closely. About textarea, isn't it similar to the button element? Both are replaced non empty elements but button does allow generated content.
The BUTTON element allows child elements so you can also have generated content as child elements... TEXTAREA is like INPUT.
(In reply to comment #6) > The BUTTON element allows child elements so you can also have generated content > as child elements... A bit off topic: So, if that's the rule, I guess generated content should not be allowed for HR element.
> I guess generated content should not be allowed for HR element. <hr> is not a replaced element in Gecko...
Summary: CSS generated content can't be applied to form elements → CSS generated content can't be applied to fieldset
Attached patch Fieldset fixSplinter Review
Assignee: dbaron → bzbarsky
Status: UNCONFIRMED → ASSIGNED
Attachment #232658 - Flags: superreview?(dbaron)
Attachment #232658 - Flags: review?(dbaron)
OS: Windows XP → All
Priority: -- → P3
Hardware: PC → All
Target Milestone: --- → mozilla1.9alpha
Flags: in-testsuite?
Summary: CSS generated content can't be applied to fieldset → [FIX]CSS generated content can't be applied to fieldset
Attachment #232658 - Flags: superreview?(dbaron)
Attachment #232658 - Flags: superreview+
Attachment #232658 - Flags: review?(dbaron)
Attachment #232658 - Flags: review+
Fixed.
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Attached file reftest
Here is one reftest for this bug. Feel free to change it before it's checked in. I guess we should probably get more coverage with some tests that have an element in the <fieldset> and using :before and :after...
Comment on attachment 243268 [details] reftest Checked in.
Attachment #243268 - Attachment mime type: application/octet-stream → application/zip
Attachment #243268 - Flags: review+
Blocks: 335774
Flags: in-testsuite? → in-testsuite+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: