Allow generated content (:before/:after) for fieldsets.  Bug 339289, r+sr=dbaron